fixed the image clipping issue

--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,12 @@
 .canvas-container {
   position: relative;
   width: 100%;
-  height: 100vh; /* Full screen */
-  overflow: hidden;
+  /* height: 100vh; Full screen */
+  /* overflow: hidden;  */
+  min-height: 100vh; /* Ensures it takes at least full screen but can grow */
+  display: block;
+  /* flex-direction: column;
+  align-items: center;  */
 }
 
 #threejscanvas {
@@ -52,6 +56,7 @@
 .profile-picture {
   width: 25rem;
   height: auto;
+  object-fit: cover;
   opacity: 0; /* Initially hidden */
   transition: opacity 1s ease; /* Smooth fade in */
 }
@@ -64,7 +69,6 @@
 .content {
   background: linear-gradient(0deg, #000726 0%, black 100%);
   transition: background 2s ease-in-out; /* Smooth transition for the background gradient */
-  padding: 20px;
   color: white;
 }
 
